--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     <script src="assets/plugins/script-loader.js" type="text/javascript"></script>
     <script src="assets/plugins/jquery.xxspubsub.min.js" type="text/javascript"></script>
 
+    <script src="assets/plugins/dfohub.sdk.min.js" type="text/javascript"></script>
     <script src="assets/plugins/solidity.utilities.min.js" type="text/javascript"></script>
     <script src="assets/plugins/blockies-base64.min.js" type="text/javascript"></script>
     <script src="assets/plugins/namehash.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/ipfs.http.client.min.js" type="text/javascript"></script>
+    <script src="assets/scripts/documents.uploader.provider.ipfs.http.js" type="text/javascript"></script>
 
     <script src="assets/plugins/rlp.min.js" type="text/javascript"></script>
     <script src="assets/plugins/react/babel.min.js" type="text/javascript"></script>
