--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <meta charset="utf-8" />
+    <title>ethArt | by DFOhub</title>
+    <meta name="description" content="Here you can create Ethereum's ERC-721 Non-Fungible Tokens by storing files via IPFS or on-chain without pay hidden fees and without any coding skill needed." />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -39,12 +41,15 @@
 </head>
 
 <body>
-    <article class="NoWeb3">
-        <section class="DisclamerWeb3">
-            <h2>Use a <span class="BOLD">Web 3</span> Browser to <span class="BOLD"> BUIDL</span> Non-Fungible Tokens</h2>
-            <p>You can find a list of Extensions and Browsers to enjoy the Web 3 here: <a href="https://etherscan.io/directory/Wallet?q=&p=1" target="_blank">Web 3 Directory</a></p>
+        <section class="BETABANNER">
+            <section>
+                <h2>Welcome to <span>ethart</span></h2>
+                <h3>Here you can create Ethereum's ERC-721 "Non-Fungible Tokens" by storing files via IPFS or on-chain without pay hidden fees and without any coding skill needed.</h3>
+                <p>You need a <a href="https://etherscan.io/directory/Wallet?q=&p=1" target="_blank">Web3 Enabler</a> to access this site... Every on-chain file is available to everyone, be careful to don't transact personal data. Ethereum and IPFS power everything here. Whatever action you take, you have full responsibility.</p>
+                <p>This protocol is provided with  ❤️ by the <a href="https://dfohub.com" target="_Blank">DFOhub</a> team, you can very the code you're running <a>here</a> and the R&D repo <a>here</a></p>
+                <a href="javascript:;">Launch Dapp</a>
+            </section>
         </section>
-    </article>
 </body>
 
 </html>
