--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h2>Welcome to <span>ethart</span></h2>
                 <h3>Here you can create Ethereum's ERC-721 "Non-Fungible Tokens" by storing files via IPFS or on-chain without pay hidden fees and without any coding skill needed.</h3>
                 <p>You need a <a href="https://etherscan.io/directory/Wallet?q=&p=1" target="_blank">Web3 Enabler</a> to access this site... Every on-chain file is available to everyone, be careful to don't transact personal data. Ethereum and IPFS power everything here. Whatever action you take, you have full responsibility.</p>
-                <p>This protocol is provided with  ❤️ by the <a href="https://dfohub.com" target="_Blank">DFOhub</a> team, you can very the code you're running <a>here</a> and the R&D repo <a>here</a></p>
+                <p>This protocol is provided with  ❤️ by the <a href="https://dfohub.com" target="_Blank">DFOhub</a> team, you can very the code you're running <a href="https://b-u-i-d-l.github.io/dfo-hub/?addr=0x4A08d087817Fa803ef3E0B4E17D7856692F5d68D" target="_Blank">here</a> and the R&D repo <a href="https://github.com/b-u-i-d-l/ethArt" target="_Blank">here</a></p>
                 <a href="javascript:;">Launch Dapp</a>
             </section>
         </section>
