--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <p>You need a <a href="https://etherscan.io/directory/Wallet?q=&p=1" target="_blank">Web3 Enabler</a> to access this site... Every on-chain file is available to everyone, be careful to don't transact personal data. Ethereum and IPFS power everything here. Whatever action you take, you have full responsibility.</p>
                 <p>This protocol is provided with  ❤️ by the <a href="https://dfohub.com" target="_Blank">DFOhub</a> team, you can very the code you're running <a href="https://b-u-i-d-l.github.io/dfo-hub/?addr=0x4A08d087817Fa803ef3E0B4E17D7856692F5d68D" target="_Blank">here</a> and the R&D repo <a href="https://github.com/b-u-i-d-l/ethArt" target="_Blank">here</a></p>
                 <a href="javascript:;">Launch Dapp</a>
+                <span class="SASSAL">
+                    <img src="https://gateway.ipfs.io/ipfs/QmWXBu3iHoTv1kY9KYFE5Fq4W4dDi3H9JJy9EWYRTQCvgP"></img>
+                </span>
             </section>
         </section>
 </body>
